<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerRow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingRight="4dp">

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/standing"
        style="@style/CardHeader2.list.center"
        android:layout_width="32dp"
        android:text="@string/header_numberSign" />

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/summonerName"
        style="@style/CardHeader2.list"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/header_champion" />

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/winPercent"
        style="@style/CardHeader2.list.center"
        android:layout_width="48dp"
        android:text="@string/header_winPercent" />

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/games"
        style="@style/CardHeader2.list.center"
        android:layout_width="48dp"
        android:text="@string/header_games" />

</LinearLayout>