<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerRow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp">

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/standing"
        style="@style/CardHeader2.list.center"
        android:layout_width="28dp"
        android:text="@string/header_numberSign"/>

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/standingChange"
        style="@style/CardHeader2.list.center"
        android:layout_width="28dp"
        android:text="%" />

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/summonerName"
        style="@style/CardHeader2.list"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:text="@string/header_summoner"/>

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/wins"
        style="@style/CardHeader2.list.center"
        android:layout_width="48dp"
        android:text="@string/header_wins"/>

    <com.seago.loltrack.fonts.RobotoLightTextView
        android:id="@+id/points"
        style="@style/CardHeader2.list.center"
        android:layout_width="48dp"
        android:text="@string/header_points" />

</LinearLayout>