<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGreen"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="8dp" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <com.seago.loltrack.fonts.RobotoLightTextView
            android:id="@+id/outcome"
            style="@style/CardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/default_outcome"
            android:textColor="@color/statGreen" />

        <com.seago.loltrack.fonts.RobotoLightTextView
            android:id="@+id/mode"
            style="@style/CardHeader2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outcome"
            android:layout_centerHorizontal="true"
            android:text="@string/default_gameMode" />

        <TextView
            android:id="@+id/length"
            style="@style/CardStat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mode"
            android:layout_centerHorizontal="true"
            android:text="@string/default_length" />

        <TextView
            android:id="@+id/timeSince"
            style="@style/CardStat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/length"
            android:layout_centerHorizontal="true"
            android:text="@string/default_timeSince" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="2dp"
                android:adjustViewBounds="true"
                android:background="@drawable/summoner_icon"
                android:contentDescription="@string/contentDescription_championIcon"
                android:maxHeight="42dp"
                android:maxWidth="42dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_unknown" />

            <RelativeLayout
                android:id="@+id/spellLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@+id/icon" >

                <ImageView
                    android:id="@+id/spell1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="2dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_spell1"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/flash" />

                <ImageView
                    android:id="@+id/spell2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spell1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_spell2"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ignite" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/spellLayout" >

                <ImageView
                    android:id="@+id/item1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="1dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item1"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/flash" />

                <ImageView
                    android:id="@+id/item2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="1dp"
                    android:layout_toRightOf="@+id/item1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item2"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ignite" />

                <ImageView
                    android:id="@+id/item3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="1dp"
                    android:layout_toRightOf="@+id/item2"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item3"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/flash" />

                <ImageView
                    android:id="@+id/item4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item1"
                    android:layout_margin="1dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item4"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ignite" />

                <ImageView
                    android:id="@+id/item5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item2"
                    android:layout_margin="1dp"
                    android:layout_toRightOf="@+id/item4"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item5"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/flash" />

                <ImageView
                    android:id="@+id/item6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item3"
                    android:layout_margin="1dp"
                    android:layout_toRightOf="@+id/item5"
                    android:adjustViewBounds="true"
                    android:background="@drawable/summoner_icon"
                    android:contentDescription="@string/contentDescription_item6"
                    android:maxHeight="18dp"
                    android:maxWidth="18dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ignite" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <com.seago.loltrack.fonts.RobotoLightTextView
                    android:id="@+id/kda"
                    style="@style/CardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/default_kda" />

                <TextView
                    android:id="@+id/kdaLabel"
                    style="@style/CardStat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kda"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_kdaNoColon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <com.seago.loltrack.fonts.RobotoLightTextView
                    android:id="@+id/gold"
                    style="@style/CardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/default_gold" />

                <TextView
                    android:id="@+id/goldLabel"
                    style="@style/CardStat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gold"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_gold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <com.seago.loltrack.fonts.RobotoLightTextView
                    android:id="@+id/minions"
                    style="@style/CardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/default_zero" />

                <TextView
                    android:id="@+id/minionsLabel"
                    style="@style/CardStat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/minions"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_minions" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>